# cantor

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  backlog.md  docker-compose.yml  shell.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: rust.yml
cantor-runtime/: Cargo.toml
cantor-runtime/src/: arena.rs  bigint.rs  deep_copy.rs  event_loop.rs  lib.rs
docs/: design-decisions.md  destructuring-plan.md  int-soundness-plan.md  int-soundness-review-2026-07-05.md  recursive-sets-plan.md  tagged-union-ir-plan.md  wrapping-and-quotient-sets-plan.md
src/: ast.rs  error.rs  kind.rs  lib.rs  main.rs  names.rs  pipeline.rs  repl.rs  span.rs
src/codegen/: aot.rs  arith.rs  blocks.rs  coerce.rs  compile.rs  expr.rs  expr_call.rs  expr_vec.rs  jit.rs  loops.rs  membership.rs  mod.rs  object.rs  overload_dispatch.rs  runtime_decls.rs  show.rs  trampoline.rs  wire.rs
src/parser/: expr.rs  items.rs  lexer.rs  mod.rs  stmt.rs
src/runtime/: bigint.rs  mod.rs
src/semantics/: builtins.rs  elaborate.rs  mod.rs  tree.rs  wellfounded.rs
src/solver/: blocks.rs  constrained.rs  disjointness.rs  encode.rs  encode_call.rs  encode_ctrl.rs  event_loop.rs  int64_split.rs  loops.rs  membership.rs  membership_seq.rs  mod.rs  obligations.rs  preds.rs  sig_check.rs  sort.rs
tests/: cli.rs  cli_tests.rs  codegen.rs  codegen_tests.rs  funcdef_tests.rs  kind_tests.rs  lexer_tests.rs  names_tests.rs  parser.rs  parser_tests.rs  runtime.rs  semantics.rs  solver.rs  solver_tests.rs
tests/cantor_files/: array_lit_in_domain_position.cantor  assert_fail.cantor  assert_pass.cantor  bad.cantor  bad_with_main.cantor  bigint_call_boundary.cantor  bigint_compare.cantor  bigint_dispatch.cantor  bigint_dispatch_small.cantor  bigint_membership.cantor  bigint_membership_negative.cantor  bigint_membership_small_value.cantor  bigint_named_set.cantor  bigint_named_set_small.cantor  bool_demo.cantor  bool_nat_narrow_bad.cantor  bool_run.cantor  bool_tuple_lets.cantor  call_domain_violation.cantor  char_ascii_construct.cantor  char_from_roundtrip.cantor  char_int_domain_violation.cantor  const_demo.cantor  (+170 more)
(+88 files in other folders)
