[package]
name = "cantor"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "v18-ci", features = ["llvm18-0"] }
# Force dynamic linking against the system libLLVM-18.so (avoids pulling in
# libPolly.a which is a separate apt package and we don't need Polly).
llvm-sys = { version = "180", features = ["prefer-dynamic"] }
# cvc5 SMT solver — domain/range constraint checking.
# Requires system packages: libcvc5-1 libcvc5-dev (apt).
cvc5 = "0.4"
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"
rustyline = "14"
# Arbitrary-precision integers — int-soundness-plan.md phase 3 (BigInt runtime).
num-bigint = "0.4"

[dev-dependencies]
# (nothing yet)

