[workspace]
members = ["cantor-runtime"]

[package]
name = "cantor"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "v18-ci", features = ["llvm18-0"] }
# Force dynamic linking against the system libLLVM-18.so (avoids pulling in
# libPolly.a which is a separate apt package and we don't need Polly).
llvm-sys = { version = "180", features = ["prefer-dynamic"] }
# cvc5 SMT solver — domain/range constraint checking.
# Requires system packages: libcvc5-1 libcvc5-dev (apt).
cvc5 = "0.4"
rustyline = "14"
# Set/vector/bigint runtime called from JIT'd and AOT-compiled Cantor code —
# split into its own crate (no cvc5/inkwell dependency) so a `cantor build`
# executable links against a lean artifact rather than the whole compiler.
cantor-runtime = { path = "cantor-runtime" }

[dev-dependencies]
# (nothing yet)

